5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1723_2505.log
== TEST (2019-05-14 10:30:41) 
-- CODE:
soma = 0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma+(-1)**i*((ang**(2*i+1)/factorial(2*i+1)))
	i = i + 1
print(round(soma, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fim = k - 1
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:30:43) 
-- CODE:
soma = 0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma+(-1)**i*((ang**(2*i+1)/factorial(2*i+1)))
	i = i + 1
print(round(soma, 10))
-- EXECUTION TIME:
0.12698
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2505/main.py", line 3, in <module>
    fim = k - 1
NameError: name 'k' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:30:43) 
-- CODE:
soma = 0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma+(-1)**i*((ang**(2*i+1)/factorial(2*i+1)))
	i = i + 1
print(round(soma, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fim = k - 1
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:31:00) 
-- CODE:
from math import*
soma = 0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma+(-1)**i*((ang**(2*i+1)/factorial(2*i+1)))
	i = i + 1
print(round(soma, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    fim = k - 1
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:31:43) 
-- CODE:
from math import*
ang = eval(input("angulo:"))
k = int(input("numero de termos:"))

soma = 0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma+(-1)**i*((ang**(2*i+1)/factorial(2*i+1)))
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:31:48) 
-- CODE:
from math import*
ang = eval(input("angulo:"))
k = int(input("numero de termos:"))

soma = 0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma+(-1)**i*((ang**(2*i+1)/factorial(2*i+1)))
	i = i + 1
print(round(soma, 10))
-- EXECUTION TIME:
0.173192
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
